# useparpat

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/dotproduct/: CMakeLists.txt  common.h  grppi_nat_dotproduct.cpp  grppi_nat_dotproduct.h  grppi_omp_dotproduct.cpp  grppi_omp_dotproduct.h  grppi_seq_dotproduct.cpp  grppi_seq_dotproduct.h  grppi_tbb_dotproduct.cpp  grppi_tbb_dotproduct.h  omp_dotproduct.cpp  omp_dotproduct.h  seq_dotproduct.cpp  seq_dotproduct.h  tbb_dotproduct.cpp  tbb_dotproduct.h
src/saxpy/: CMakeLists.txt  common.h  grppi_nat_saxpy.cpp  grppi_nat_saxpy.h  grppi_omp_saxpy.cpp  grppi_omp_saxpy.h  grppi_saxpy.cpp  grppi_seq_saxpy.cpp  grppi_seq_saxpy.h  grppi_tbb_saxpy.cpp  grppi_tbb_saxpy.h  omp_saxpy.cpp  omp_saxpy.h  seq_saxpy.cpp  seq_saxpy.h  tbb_saxpy.cpp  tbb_saxpy.h
src/vecreduce/: CMakeLists.txt  common.h  grppi_nat_vecreduce.cpp  grppi_nat_vecreduce.h  grppi_omp_vecreduce.cpp  grppi_omp_vecreduce.h  grppi_seq_vecreduce.cpp  grppi_seq_vecreduce.h  grppi_tbb_vecreduce.cpp  grppi_tbb_vecreduce.h  omp_vecreduce.cpp  omp_vecreduce.h  seq_vecreduce.cpp  seq_vecreduce.h  tbb_vecreduce.cpp  tbb_vecreduce.h
